Implement get_department.
TODO: Currently does not support granularity, instead returning all data in a single row
